--- a/dossier/dossierEXT-en.html
+++ b/dossier/dossierEXT-en.html
@@ -4,6 +4,10 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
+    <!--No cache-->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
     <title>Health Canada Dossier Template</title>
@@ -164,7 +168,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2017-03-24 </time>
+                <time property="dateModified">2017-04-10 </time>
             </dd>
         </dl>
     </div>
@@ -243,7 +247,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/dossierAppEXT-en_20170324_1553.min.js"></script>
+<script src="app/scripts/dossierAppEXT-en_20170410_1306.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
