--- a/transaction/transactionEXT-fr.html
+++ b/transaction/transactionEXT-fr.html
@@ -4,6 +4,11 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
+    <!--No cache-->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
+
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
     <title>Health Canada Transaction template</title>
@@ -161,7 +166,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2017-03-24 </time>
+                <time property="dateModified">2017-04-10 </time>
             </dd>
         </dl>
     </div>
@@ -244,7 +249,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-fr_20170324_1554.min.js"></script>
+<script src="app/scripts/transactionAppEXT-fr_20170410_1318.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
