--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <div>
             <div class="row">
-                <h2>REP Form Links (Last updated: March 28, 2017)</h2>
+                <h2>REP Form Links (Last updated: April 12, 2017)</h2>
             </div>
             <div class="row">
                 <div class="col-md-12 form-group">
@@ -160,7 +160,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 form-group">
-                    <a href="dossierEXT-en.html">Dossier Enrolment</a>
+                    <a href="./dossier/dossierEXT-en.html">Dossier Enrolment</a>
                 </div>
             </div>
             <div class="row">
@@ -181,7 +181,7 @@
     <div class="row">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date modified: March 28, 2017</dt>
+                <dt>Date modified: April 12, 2017</dt>
             </dl>
         </div>
     </div>
