--- a/test/Facts-Table.html
+++ b/test/Facts-Table.html
@@ -46,7 +46,7 @@
     <div>
         <div class="cft-box-top cft-box-right cft-box-left cft-box-bottom">
             <div class="row">
-                <section class="col-md-8 col-xs-12">
+                <section class="col-sm-8 col-xs-12">
                     <div class="mrgn-lft-sm mrgn-rght-sm">
                         <h2>Active ingredients (in each dosage unit)</h2>
                         <ul>
@@ -54,7 +54,7 @@
                         </ul>
                     </div>
                 </section>
-                <div class="col-md-4 col-xs-12">
+                <div class="col-sm-4 col-xs-12">
                     <div class="mrgn-lft-sm mrgn-rght-sm">
                         <h2>Purpose</h2>
                         <ul>
