--- a/csp/cspEXT-en.html
+++ b/csp/cspEXT-en.html
@@ -75,9 +75,9 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <!--<ul class="list-inline margin-bottom-none">
-                    <li><a lang="fr" href="content-fr.html">Français</a></li>
-                    </ul>-->
+                    <ul class="list-inline margin-bottom-none">
+                    <li><a lang="fr" href=cspEXT-fr.html>Français</a></li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/REP-Form/index.html">Home</a></li>
+                    <li><a href="https://lam-dev.hres.ca/rep_test/index.html">Home</a></li>
                 </ol>
             </div>
         </div>
@@ -167,7 +167,7 @@
         <dl id="wb-dtmd">
             <dt>Date modified:&#32;</dt>
             <dd>
-                <time property="dateModified">2017-05-04 </time>
+                <time property="dateModified">2017-05-16 </time>
             </dd>
         </dl>
     </div>
@@ -246,7 +246,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-en_20170504_1437.min.js"></script>
+<script src="app/scripts/cspAppEXT-en_20170516_1451.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
