--- a/csp/cspEXT-fr.html
+++ b/csp/cspEXT-fr.html
@@ -11,7 +11,7 @@
 
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>fr_Health Canada CSP Form</title>
+    <title>Formulaire CPS de Santé Canada</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
@@ -71,16 +71,16 @@
 </ul>
 <header role="banner">
     <div id="wb-bnr" class="container">
-        <!--<section id="wb-lng" class="visible-md visible-lg text-right">
+        <section id="wb-lng" class="visible-md visible-lg text-right">
         <h2 class="wb-inv">Sélection de la langue</h2>
         <div class="row">
         <div class="col-md-12">
         <ul class="list-inline margin-bottom-none">
-        <li><a lang="en" href="content-en.html">English</a></li>
+        <li><a lang="en" href=cspEXT-en.html >English</a></li>
         </ul>
         </div>
         </div>
-        </section>-->
+        </section>
         <div class="row">
             <div class="brand col-xs-8 col-sm-9 col-md-6">
                 <a href="http://www.canada.ca/fr/index.html">
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/REP-Form/index-fr.html">Accueil</a></li>
+                    <li><a href="https://lam-dev.hres.ca/rep_test/index-fr.html">Accueil</a></li>
                 </ol>
             </div>
         </div>
@@ -150,7 +150,7 @@
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont">fr_Certificate of Supplementary Protection (CSP) Application Form</h1>
+        <h1 property="name" id="wb-cont">Formulaire de la demande de certificat de protection supplémentaire (CPS)</h1>
 
         <!-- inject:mainContent-->
         <div id="app-root" ng-app="cspApp" ng-controller="MainController as ctrl">
@@ -166,7 +166,7 @@
         <dl id="wb-dtmd">
             <dt>Date de modification&#160;:&#32;</dt>
             <dd>
-                <time property="dateModified">2017-05-04 </time>
+                <time property="dateModified">2017-05-16 </time>
             </dd>
         </dl>
     </div>
@@ -249,7 +249,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-fr_20170504_1437.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20170516_1451.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
