--- a/index.html
+++ b/index.html
@@ -153,10 +153,16 @@
                 <h2> CSP Form</h2>
             </div>
             <div class="row">
-                <a href="./csp/cspEXT-en.html">CSP Form English-External (May 4)</a>
+                <a href="./csp/cspEXT-en.html">CSP Form English-External (May 16)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspINT-en.html">CSP Form English-Internal (May 4))</a>
+                <a href="./csp/cspINT-en.html">CSP Form English-Internal (May 16)</a>
+            </div>
+            <div class="row">
+                <a href="./csp/cspEXT-fr.html">CSP Form French-External (May 16)</a>
+            </div>
+            <div class="row">
+                <a href="./csp/cspINT-fr.html">CSP Form French-Internal (May 16)</a>
             </div>
         </div>
 
