--- a/csp/cspEXT-en.html
+++ b/csp/cspEXT-en.html
@@ -90,7 +90,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "http://www.canada.ca/en/index.htm"}],
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/rep_test/index.html"}],
         lngLinks:[{
            lang:"fr",
             href:"cspEXT-fr.html",
@@ -125,7 +125,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-05-30",
+            dateModified:"2017-06-05",
             showShare:false,
             showFeedback:false
         })
@@ -169,7 +169,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-en_20170530_1248.min.js"></script>
+<script src="app/scripts/cspAppEXT-en_20170605_1055.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
