--- a/csp/cspEXT-fr.html
+++ b/csp/cspEXT-fr.html
@@ -85,7 +85,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Accueil", href: "http://www.canada.ca/fr/index.htm"}],
+        breadcrumbs: [{title: "Accueil", href: "https://lam-dev.hres.ca/rep_test/index-fr.html"}],
         lngLinks:[{
             lang:"en",
             href:"cspEXT-en.html",
@@ -117,7 +117,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-05-30",
+            dateModified:"2017-06-05",
             showShare:false,
             showFeedback:false
         })
@@ -158,7 +158,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-fr_20170530_1248.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20170605_1055.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
