--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
                 <h2> CSP Form</h2>
             </div>
             <div class="row">
-                <a href="./csp/cspEXT-en.html">CSP Form English-External (June 5b)</a>
+                <a href="./csp/cspEXT-en.html">CSP Form English-External (June 5c)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspINT-en.html">CSP Form English-Internal (June 5b)</a>
+                <a href="./csp/cspINT-en.html">CSP Form English-Internal (June 5c)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspEXT-fr.html">CSP Form French-External (June 5b)</a>
+                <a href="./csp/cspEXT-fr.html">CSP Form French-External (June 5c)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspINT-fr.html">CSP Form French-Internal (June 5b)</a>
+                <a href="./csp/cspINT-fr.html">CSP Form French-Internal (June 5c)</a>
             </div>
         </div>
 
