--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
 
         <div>
             <div class="row">
-                <h2> CSP Form</h2>
+                <h2>CSP Form</h2>
             </div>
             <div class="row">
-                <a href="./csp/cspEXT-en.html">CSP Form English-External (June 5c)</a>
+                <a href="./csp/cspEXT-en.html">CSP Form English-External (June 7)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspINT-en.html">CSP Form English-Internal (June 5c)</a>
+                <a href="./csp/cspINT-en.html">CSP Form English-Internal (June 7)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspEXT-fr.html">CSP Form French-External (June 5c)</a>
+                <a href="./csp/cspEXT-fr.html">CSP Form French-External (June 7)</a>
             </div>
             <div class="row">
-                <a href="./csp/cspINT-fr.html">CSP Form French-Internal (June 5c)</a>
+                <a href="./csp/cspINT-fr.html">CSP Form French-Internal (June 7)</a>
             </div>
         </div>
 
